--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
+REACT_APP_PUBLIC_FOLDERS= 'mongodb+srv://padiapiyush12:newpassword12@cluster0.jhxrht3.mongodb.net/contactdata?retryWrites=true&w=majority'
 REACT_APP_PUBLIC_FOLDER = http://localhost:5000/images/
