added build command

--- a/socket/package.json
+++ b/socket/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm i"
   },
   "dependencies": {
     "nodemon": "^2.0.16",
