--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,11 @@ MONGODB_CONNECTION='mongodb+srv://padiapiyush12:newpassword12@cluster0.jhxrht3.m
 JWTKEY="MERN"
 
 PORT = 5000
+
+BUCKET_NAME=socialspherebucket
+
+BUCKET_REGION=ap-northeast-1 
+
+ACCESS_KEY=AKIA5QLH376MVL2GAJCQ
+
+SECRET_ACCESS_KEY=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
