--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "path": "^0.12.7"
+  },
+  "engines": {
+  "node": "20.x"
   }
+  
 }
